# OrderBookArchiver

./: BTCUSDT-orderBook-01-07-2025-18h44m.csv  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  OrderBookManager.cpp  OrderBookManager.h  OrderBookWriter.cpp  OrderBookWriter.h  main.cpp
